--- a/assignment3-5/pom.xml
+++ b/assignment3-5/pom.xml
@@ -14,7 +14,7 @@
     <name>Practical3</name>
     <description>Practical3</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>18</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -35,6 +35,15 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.theokanning.openai-gpt3-java</groupId>
+            <artifactId>client</artifactId>
+            <version>0.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.theokanning.openai-gpt3-java</groupId>
+            <artifactId>api</artifactId>
+            <version>0.8.0</version>
+        </dependency>
     </dependencies>
 </project>
